--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <link rel="icon" href="images/favicon.png" type="image/png">
 
     <!-- ملف النورمليز لتظبيت الصفحه -->
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="normalize.css">
 
     <!-- مكاتب فونت اسوم -->
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="all.min.css">
 
     <!-- ملف ال css الاساسي -->
     <link rel="stylesheet" href="to-do-list.css">
@@ -92,7 +92,7 @@
         </div>
     </div>
 <!-- end footer -->
-    <script src="script/main.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html> 
